# gopy-example

./: .gitignore  Readme.md  go.mod  justfile  pyproject.toml
src/benchmarks/: main.py
src/fibonacci/go/: __init__.py
src/fibonacci/go/source/: fibonacci.go  tools.go
src/fibonacci/python/: __init__.py  fibonacci.py
